# memtrust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: methodology.md
docs/blog/: memtrust-part1-would-your-ai-benchmark-survive-being-audited.md  memtrust-part2-can-an-ai-agent-install-your-cli.md
leaderboard/: data.json  index.html  mem0_direct-2026-07-20.json
npm/memtrust/: package.json
npm/memtrust-cli/: README.md  package.json
npm/scripts/: fetch-binary.js
src/memtrust/: __init__.py  cli.py  receipt.py
src/memtrust/adapters/: __init__.py  base.py  mem0_adapter.py  mem0_direct_adapter.py  mempalace_adapter.py  openviking_adapter.py  zep_graphiti_adapter.py  zep_graphiti_selfhosted_adapter.py
src/memtrust/evals/: __init__.py  compression.py  contradiction.py  crash_recovery.py  embedder_cost.py  embedding_drift.py  episode_temporal_leak.py  extraction_quality.py  filter_injection.py  language_degradation.py  lock_contention.py  locomo.py  longmemeval.py  mempalace_metadata_scale.py  migration_rollback.py  orphan_cleanup.py  ranking_quality.py  resource_sync_safety.py  result_consistency.py  scale_fixtures.py  scale_stress.py  stats_accuracy.py  temporal_kg_boundary.py
src/memtrust/scoring/: __init__.py  cost_tracker.py  llm_judge.py
tests/: test_adapters.py  test_cli.py  test_compression.py  test_episode_temporal_leak.py  test_evals.py  test_init.py  test_lock_contention.py  test_mem0_direct_adapter.py  test_mempalace_metadata_scale.py  test_receipt.py  test_scale_stress.py  test_scoring.py  test_stats_accuracy.py  test_temporal_kg_boundary.py
tests/fixtures/: compression_cases.json  contradiction_cases.json  crash_recovery_cases.json  embedding_drift_cases.json  extraction_quality_cases.json  filter_injection_cases.json  language_degradation_cases.json  locomo_sample.json  longmemeval_sample.json  migration_rollback_cases.json  orphan_cleanup_cases.json  ranking_quality_cases.json  resource_sync_cases.json  result_consistency_cases.json
