[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memtrust"
version = "0.1.0"
description = "Independent, reproducible benchmark harness for agent-memory backends"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Rudrendu Paul" },
    { name = "Sourav Nandy" },
]
keywords = ["llm", "agent", "memory", "benchmark", "eval", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.27.0,<1.0",
    "click>=8.1.7,<9.0",
    "rich>=13.7.1,<14.0",
    "pydantic>=2.7.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-httpx>=0.30.0,<1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0,<2.0",
    "pip-audit>=2.7.3,<3.0",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/memtrust"
Issues = "https://github.com/RudrenduPaul/memtrust/issues"

[project.scripts]
memtrust = "memtrust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memtrust"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["memtrust"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=memtrust --cov-report=term-missing"

[tool.coverage.run]
source = ["src/memtrust"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
