[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memtrust"
version = "0.1.2"
description = "Independent, reproducible benchmark harness for agent-memory backends"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Rudrendu Paul" },
    { name = "Sourav Nandy" },
]
keywords = ["llm", "agent", "memory", "benchmark", "eval", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.27.0,<1.0",
    "click>=8.1.7,<9.0",
    "rich>=13.7.1,<14.0",
    "cryptography>=42.0.0,<47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-httpx>=0.36.2,<1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0,<2.0",
    "pip-audit>=2.7.3,<3.0",
]
# Only mem0_direct_adapter.py needs the real mem0ai library in-process
# (see its module docstring) -- every other adapter talks HTTP and is
# tested fully offline against pytest-httpx or a hand-written Protocol
# fake, with no vendor package installed at all. This group is kept
# separate from `dev` so a contributor working on any other adapter never
# needs boto3/fastembed/redis/valkey/google-genai just to run `pytest`;
# tests/test_mem0_direct_adapter.py itself uses `pytest.importorskip` so
# it degrades to a clean, explained skip rather than a collection error
# when this group isn't installed. CI installs both (see .github/workflows
# /ci.yml) so these tests do run for real, against the real installed
# mem0ai version, on every push -- not just in this build's local venv.
mem0-direct = [
    "mem0ai>=2.0.12,<3.0",
    "boto3>=1.34.0,<2.0",
    "google-genai>=1.0.0,<2.0",
    "fastembed>=0.3.1,<1.0",
    "redis>=5.0.0,<6.0",
    "redisvl>=0.3.0,<1.0",
    "valkey>=6.0.0,<7.0",
    "elasticsearch>=8.0.0,<9.0",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/memtrust"
Issues = "https://github.com/RudrenduPaul/memtrust/issues"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
memtrust = "memtrust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memtrust"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["memtrust"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=memtrust --cov-report=term-missing"

[tool.coverage.run]
source = ["src/memtrust"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
