[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memtrust"
version = "0.2.0"
description = "Independent, reproducible benchmark harness for agent-memory backends"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Rudrendu Paul" },
    { name = "Sourav Nandy" },
]
keywords = ["llm", "agent", "memory", "benchmark", "eval", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.27.0,<1.0",
    "click>=8.1.7,<9.0",
    "rich>=13.7.1,<14.0",
    "cryptography>=42.0.0,<47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-httpx>=0.36.2,<1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0,<2.0",
    "pip-audit>=2.7.3,<3.0",
]
# Only mem0_direct_adapter.py needs the real mem0ai library in-process
# (see its module docstring) -- every other adapter talks HTTP and is
# tested fully offline against pytest-httpx or a hand-written Protocol
# fake, with no vendor package installed at all. This group is kept
# separate from `dev` so a contributor working on any other adapter never
# needs boto3/fastembed/redis/valkey/google-genai just to run `pytest`;
# tests/test_mem0_direct_adapter.py itself uses `pytest.importorskip` so
# it degrades to a clean, explained skip rather than a collection error
# when this group isn't installed. CI installs both (see .github/workflows
# /ci.yml) so these tests do run for real, against the real installed
# mem0ai version, on every push -- not just in this build's local venv.
mem0-direct = [
    "mem0ai>=2.0.12,<3.0",
    "boto3>=1.34.0,<2.0",
    "google-genai>=1.0.0,<2.0",
    "fastembed>=0.3.1,<1.0",
    "redis>=5.0.0,<6.0",
    "redisvl>=0.3.0,<1.0",
    "valkey>=6.0.0,<7.0",
    "elasticsearch>=8.0.0,<9.0",
]
# MemPalaceAdapter holds a direct, in-process handle to the real
# `mempalace.mcp_server` module's tool_status/tool_list_wings/
# tool_list_rooms/tool_add_drawer/tool_search/tool_update_drawer/
# tool_delete_drawer/tool_kg_add/tool_kg_invalidate/tool_kg_query
# functions (see mempalace_adapter.py's module docstring -- as of the
# store()/query()/update()/delete()/kg_* rewrite, every one of these is a
# live-verified, confirmed-real call, not the unconfirmed `mempalace.
# Palace` guess earlier versions of this adapter shipped). Both
# tests/test_mempalace_metadata_scale.py's real-seeder integration test
# and tests/test_adapters.py's real-drawer/real-KG integration tests use
# `pytest.importorskip("mempalace")` so they degrade to a clean, explained
# skip rather than a collection error when this group isn't installed --
# confirmed working locally against the real installed mempalace/chromadb
# (3.5.0): seeding 20,000 synthetic drawers and re-querying
# tool_status()/tool_list_wings() against them returned correct
# ground-truth counts in well under 100ms; store()/query()/update()/
# delete()/kg_add()/kg_invalidate()/kg_query() were each live-verified
# end-to-end against a real local chromadb-backed palace.
#
# Unlike mem0-direct above, this group is deliberately NOT installed by
# any CI job. This repo's existing ImportError-path test
# (test_mempalace_get_mcp_tools_raises_clear_error_when_package_missing)
# relies on `mempalace` being genuinely absent from the test environment,
# the same convention test_graphiti_selfhosted_get_client_raises_clear_
# error_when_package_missing already establishes for graphiti-core --
# installing this group in a shared CI job would silently break it. A
# contributor can install it locally
# (`pip install -e ".[dev,mempalace-direct]"`) to run the real integration
# tests; CI intentionally exercises only the fake-backed tests, the same
# boundary this repo already draws around graphiti-core.
mempalace-direct = [
    "mempalace>=3.0.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/memtrust"
Issues = "https://github.com/RudrenduPaul/memtrust/issues"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
memtrust = "memtrust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memtrust"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["memtrust"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=memtrust --cov-report=term-missing"

[tool.coverage.run]
source = ["src/memtrust"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
